--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,11 @@ layout: default
   {{ content }}
 </div>
 
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
+
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
