--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -147,7 +147,8 @@ abbr[title] {
 /* Code */
 code,
 pre {
-  font-family: Menlo, Monaco, "Courier New", monospace;
+  /*font-family: Menlo, Monaco, "Courier New", monospace;*/
+  font-family: Consolas, Menlo, Monaco, "Courier New", monospace;
 }
 code {
   padding: .25em .5em;
