--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,64 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+<html lang='{{ site.language }}'>
 
-  {% include head.html %}
+<head>
+    <meta charset='utf-8'>
+    <title>
+        {% if page.title %}
+            {{ page.title }}
+        {% else %} 
+            {{ site.name }} &mdash; {{ site.description }}
+        {% endif %}
+    </title>
 
-  <body>
+    <meta name='robots' content='index,follow'>
+    <meta name='revisit-after' content='1 days'>
 
-    {% include sidebar.html %}
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name='HandheldFriendly' content='True'>
+    <meta name='MobileOptimized' content='320'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
+    <meta http-equiv='cleartype' content='on'>
 
-    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
-         content to avoid any CSS collisions with our real content. -->
-    <div class="wrap">
-      <div class="masthead">
-        <div class="container">
-          <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+    {% if site.highlighter %}
+        <link rel='stylesheet' href='{{ site.url }}/assets/css/syntax.css' type='text/css'>
+    {% endif %}
+    
+    <link rel='stylesheet' href='{{ site.url }}/assets/css/minimal-block.css' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
+    <link rel='alternate' type='application/rss+xml' title='{{ site.name }}' href='{{ site.url }}/feed.xml'>
 
-          <h3 class="masthead-title">
-            <a href="/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
-          </h3>
+</head>
+
+<body>
+    <header id='top' class='main-header'>
+
+        <div class='module title color-1'>
+            <h1><a href='{{ site.url }}/'>{{ site.name }}</a></h1>
         </div>
-      </div>
 
-      <div class="container content">
-        {{ content }}
-      </div>
-    </div>
+        <div class='module description color-2'>
+            {{ site.description }}
+        </div>
 
-  </body>
+        <nav class='module main-menu color-4'>
+            <a href='{{ site.url }}/'>Home</a>
+            <a href='{{ site.url }}/about/'>About</a>
+            <a href='{{ site.url }}/contact/'>Contact</a>
+        </nav>
+
+        <div class='module links color-3'>
+            <a href='https://github.com/{{ site.github }}' title='Profile in Github' target='_blank'>github</a>
+            <a href='https://twitter.com/{{ site.twitter }}' title='Profile in Twitter' target='_blank'>twitter</a>
+            <a href='https://plus.google.com/{{ site.google }}' title='Profile in Google+' target='_blank'>Google+</a>
+            <a href='{{ site.url }}/feed.xml' title='Suscribe to RSS' target='_blank'>rss</a>
+        </div>
+
+    </header>
+
+    {{ content }}
+
+    {% include footer.html %}
+
+</body>
 </html>
