--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,29 +2,23 @@
 layout: default
 ---
 
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
-  {{ content }}
+<div id='top' class="main-content">
+   
+    <article class="module color-3">
+       
+        <h1>{{ page.title }}{{ page.shortUrl }}</h1>
+        <div class='separator'></div>
+        
+        {{ content }}
+        
+        <p class="top"><small><a href="#top">[top]</a></small></p>
+        
+    </article>
+    
+    {% if site.enable-share %} {% include share.html %} {% endif %}
+    {% if site.disqus-id %} {% include comments.html %} {% endif %}
+
 </div>
 
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
 
-<!-- UY BEGIN -->
-<div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
-<!-- UY END -->
+
